--- a/reveal.js/test/examples/embedded-media.html
+++ b/reveal.js/test/examples/embedded-media.html
@@ -23,18 +23,22 @@
 				</section>
 
 				<section>
-					<iframe data-autoplay width="420" height="345" src="https://www.youtube.com/embed/l3RQZ4mcr1c"></iframe>
+					<iframe data-autoplay width="420" height="345" src="http://www.youtube.com/embed/l3RQZ4mcr1c"></iframe>
 				</section>
 
 				<section>
 					<h2>Empty Slide</h2>
 				</section>
 
+				<section>
+					<h2>Auto-playing audio</h2>
+					<audio src="assets/beeping.wav" data-autoplay></audio>
+				</section>
+
 			</div>
 
 		</div>
 
-		<script src="../../lib/js/head.min.js"></script>
 		<script src="../../js/reveal.js"></script>
 
 		<script>
